--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
         <div class="contact-grid">
           <div class="contact-item">
             <span>E-posta</span>
-            <a href="mailto:ornek@mail.com">ornek@mail.com</a>
+            <a href="mailto:ornek@mail.com">hotmyahmet@gmail.com</a>
           </div>
           <div class="contact-item">
             <span>GitHub</span>
@@ -728,7 +728,7 @@
           <div class="contact-item">
             <span>LinkedIn</span>
             <a href="https://www.linkedin.com/in/kullaniciadiniz" target="_blank" rel="noopener">
-              linkedin.com/in/kullaniciadiniz
+       https://www.linkedin.com/in/davut-yayla-54a754301/
             </a>
           </div>
         </div>
